--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+head{
+        background-color: pink;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
